新增dashboard需要的各个环境汇总接口，已经获取各个环境配置中心状态信息的功能
