# scca-rest/src/main/generated/swagger-ui/swagger.json
@@ -11,6 +11,8 @@
     }
   },
   "tags" : [ {
+    "name" : "Dashboard信息"
+  }, {
     "name" : "EncryptKey MGT（加密管理）"
   }, {
     "name" : "Env MGT（环境管理）"
@@ -23,6 +25,22 @@
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
+    "${scca.rest.context-path}/dashboard/envSummary" : {
+      "get" : {
+        "tags" : [ "Dashboard信息" ],
+        "summary" : "Env Summary / 环境总览信息",
+        "description" : "",
+        "operationId" : "envSummaryInfo",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespListDashboardEnvDto"
+            }
+          }
+        }
+      }
+    },
     "${scca.rest.context-path}/encryptKey" : {
       "get" : {
         "tags" : [ "EncryptKey MGT（加密管理）" ],
@@ -518,6 +536,62 @@
         }
       }
     },
+    "${scca.rest.context-path}/project/env" : {
+      "post" : {
+        "tags" : [ "Project MGT（项目管理）" ],
+        "summary" : "Project Add Env / 项目增加环境",
+        "description" : "",
+        "operationId" : "addProjectEnv",
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "envId",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "Project MGT（项目管理）" ],
+        "summary" : "Project Remove Env / 项目移除环境",
+        "description" : "",
+        "operationId" : "deleteProjectEnv",
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "envId",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      }
+    },
     "${scca.rest.context-path}/project/label" : {
       "post" : {
         "tags" : [ "Project MGT（项目管理）" ],
@@ -540,7 +614,7 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/WebRespString"
+              "$ref" : "#/definitions/WebRespLabelDto"
             }
           }
         }
@@ -600,7 +674,7 @@
       }
     },
     "${scca.rest.context-path}/property/decrypt" : {
-      "get" : {
+      "post" : {
         "tags" : [ "Property MGT（配置详细管理）" ],
         "summary" : "Decrypt property / 解密配置",
         "description" : "",
@@ -628,7 +702,7 @@
       }
     },
     "${scca.rest.context-path}/property/encrypt" : {
-      "get" : {
+      "post" : {
         "tags" : [ "Property MGT（配置详细管理）" ],
         "summary" : "Encrypt property / 加密配置",
         "description" : "",
@@ -729,6 +803,43 @@
     }
   },
   "definitions" : {
+    "ConfigServerInfo" : {
+      "type" : "object",
+      "properties" : {
+        "url" : {
+          "type" : "string"
+        },
+        "encryptStatus" : {
+          "type" : "string"
+        }
+      }
+    },
+    "DashboardEnvDto" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "configServers" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/ConfigServerInfo"
+          }
+        },
+        "projects" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "params" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
     "EncryptKeyDto" : {
       "type" : "object",
       "properties" : {
@@ -868,6 +979,51 @@
         },
         "data" : {
           "$ref" : "#/definitions/EnvDto"
+        },
+        "message" : {
+          "type" : "string",
+          "description" : "响应消息"
+        },
+        "timestamp" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "时间戳"
+        }
+      }
+    },
+    "WebRespLabelDto" : {
+      "type" : "object",
+      "properties" : {
+        "code" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "data" : {
+          "$ref" : "#/definitions/LabelDto"
+        },
+        "message" : {
+          "type" : "string",
+          "description" : "响应消息"
+        },
+        "timestamp" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "时间戳"
+        }
+      }
+    },
+    "WebRespListDashboardEnvDto" : {
+      "type" : "object",
+      "properties" : {
+        "code" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "data" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/DashboardEnvDto"
+          }
         },
         "message" : {
           "type" : "string",
